[package]
name = "apexcharts-rs"
description = "Rust WASM bindings and chart components for ApexCharts. "
authors = ["Clement Wanjau <clementwanjau@gmail.com>"]
repository = "https://github.com/clementwanjau/apexcharts-rs"
documentation = "https://docs.rs/apexcharts-rs"
version = "0.1.5"
edition = "2021"
keywords = ["apexcharts", "wasm-charts", "visualization", "yew-charts", "leptos-charts"]
license = "Apache-2.0"
categories = ["wasm", "web-programming", "visualization"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
leptos = ["dep:leptos"]
yew = ["dep:yew", "dep:gloo"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
serde-wasm-bindgen = "0.6.5"
yew  = { version = "0.21.0", features = ["csr"], optional = true }
gloo = { version = "0.11.0", optional = true}
indexmap = {version = "2.2.6", features = ["serde"]}
leptos = { version = "0.6.11", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

